# ai-launchpad

./: .gitignore  .pre-commit-config.yaml  README.md  netlify.toml  package-lock.json  package.json  pyproject.toml
.claude/skills/business-website/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  website.yml
docs/: ci-cd.md  website-walkthrough.md
src/: config.ts
src/ai_launchpad/: __init__.py
src/components/: Footer.astro  Header.astro
src/content/blog/: how-to-add-a-blog-post.md
src/layouts/: BaseLayout.astro
src/pages/: 404.astro  about.astro  offerings.astro
src/pages/blog/: [...slug].astro  index.astro
src/styles/: global.css
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  vercel.json
website/scripts/: capture-evidence.mjs
website/src/: content.config.ts
website/src/content/blog/: welcome-to-ai-launchpad.md
website/src/layouts/: BlogPostLayout.astro
website/src/pages/: index.astro  rss.xml.js
