[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-launchpad"
version = "0.0.1"
description = "AI Launchpad"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hyperscale AI Labs" }]
keywords = ["ai", "launchpad"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "mypy>=1.14",
  "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/hyperscaleailabs/ai-launchpad"
Repository = "https://github.com/hyperscaleailabs/ai-launchpad"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_launchpad"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# A sensible default rule set: pyflakes, pycodestyle, isort, bugbear,
# comprehensions, pyupgrade, and simplify.
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ai_launchpad"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["ai_launchpad"]

[tool.coverage.report]
show_missing = true
